resolved align issue of shelf

--- a/style/basic.css
+++ b/style/basic.css
@@ -35,13 +35,16 @@ nav{
     width: 100%;
 
     display: inline-flex;
-    justify-content: center;
+    flex-direction: column;
+/*    justify-content: start;
+    flex-direction: column;
+    align-items: center;*/
 }
 
 #pageTail{
     display:inline-block;
-    margin-top: 10px;
-    padding: 20px;
+    margin-top: 5px;
+    padding: 1vw;
     text-align: center;
     /*background-color: red;*/
     align-self: center;
@@ -140,6 +143,12 @@ nav{
     margin-top: 80px;
 
 }
+/* 注意，main_content提供的是一个基础的限位，基本的左右margin。但是有的东西，本身更加接近于一个文章，
+如果只使用这个，会导致大小出问题。
+因此可以再加入a4content，用于解决这个问题。
+*/
+
+
 
 #size_limiter{
     min-width: 80%;
