--- a/style/index.css
+++ b/style/index.css
@@ -14,6 +14,8 @@
 
     max-height: 80vh;
     max-height: 80svh;
+
+    margin: 0 auto;
     
 }
 
